--- a/DioKftSite/Web.config
+++ b/DioKftSite/Web.config
@@ -74,8 +74,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<!--<connectionStrings><add name="DioKftEntities" connectionString="metadata=res://*/Models.DioKftModel.csdl|res://*/Models.DioKftModel.ssdl|res://*/Models.DioKftModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PEPJ337;initial catalog=DioKFT;persist security info=True;user id=DioKftUser;password=DioKftUser1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>-->
-<connectionStrings>
+<connectionStrings><add name="DioKftEntities" connectionString="metadata=res://*/Models.DioKftModel.csdl|res://*/Models.DioKftModel.ssdl|res://*/Models.DioKftModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PEPJ337;initial catalog=DioKFT;persist security info=True;user id=DioKftUser;password=DioKftUser1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<!--<connectionStrings>
   <add name="DioKftEntities" connectionString="metadata=res://*/Models.DioKftModel.csdl|res://*/Models.DioKftModel.ssdl|res://*/Models.DioKftModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=tcp:dio-kft-sql-server.database.windows.net,1433;Initial Catalog=DioKftDB;User Id=msapi@dio-kft-sql-server.database.windows.net;Password=Labhoz9324&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>
-</configuration>
+</connectionStrings>-->
+<!--</configuration>-->
