--- a/DioKftSite/Web.config
+++ b/DioKftSite/Web.config
@@ -47,7 +47,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -57,7 +57,9 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-  </system.webServer>
+  <handlers>
+		  <add name="MVCGridHandler" verb="*" path="MVCGridHandler.axd" type="MVCGrid.Web.MVCGridHandler, MVCGrid" />
+		</handlers></system.webServer>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
@@ -74,8 +76,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="DioKftEntities" connectionString="metadata=res://*/Models.DioKftModel.csdl|res://*/Models.DioKftModel.ssdl|res://*/Models.DioKftModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PEPJ337;initial catalog=DioKFT;persist security info=True;user id=DioKftUser;password=DioKftUser1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
-<!--<connectionStrings>
+<!--<connectionStrings><add name="DioKftEntities" connectionString="metadata=res://*/Models.DioKftModel.csdl|res://*/Models.DioKftModel.ssdl|res://*/Models.DioKftModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PEPJ337;initial catalog=DioKFT;persist security info=True;user id=DioKftUser;password=DioKftUser1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>-->
+<connectionStrings>
   <add name="DioKftEntities" connectionString="metadata=res://*/Models.DioKftModel.csdl|res://*/Models.DioKftModel.ssdl|res://*/Models.DioKftModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=tcp:dio-kft-sql-server.database.windows.net,1433;Initial Catalog=DioKftDB;User Id=msapi@dio-kft-sql-server.database.windows.net;Password=Labhoz9324&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>-->
-<!--</configuration>-->
+</connectionStrings>
+</configuration>
