--- a/DioKftSite/packages.config
+++ b/DioKftSite/packages.config
@@ -26,6 +26,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net462" />
   <package id="Modernizr" version="2.6.2" targetFramework="net462" />
+  <package id="MVCGrid.Net" version="1.0.0.61" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net462" />
   <package id="Respond" version="1.2.0" targetFramework="net462" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net462" />
@@ -33,6 +34,7 @@
   <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net462" />
   <package id="System.Net.Requests" version="4.0.11" targetFramework="net462" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net462" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
   <package id="WindowsAzure.Storage" version="8.1.4" targetFramework="net462" />
 </packages>
