--- a/DioKftSite/Views/Web.config
+++ b/DioKftSite/Views/Web.config
@@ -18,7 +18,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
         <add namespace="DioKftSite" />
-      <add namespace="MVCGrid.Web" /></namespaces>
+      </namespaces>
     </pages>
   </system.web.webPages.razor>
 
