--- a/DioKftSite/DioKftSite.csproj
+++ b/DioKftSite/DioKftSite.csproj
@@ -313,7 +313,7 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.woff2" />
     <Content Include="fonts\FontAwesome.otf" />
-    <None Include="Properties\PublishProfiles\DioKftSite - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\Dio896 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
