Upgrade Products Page

--- a/DioKftSite/Web.config
+++ b/DioKftSite/Web.config
@@ -80,16 +80,13 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
-  </entityFramework>-->
-  <!--
-  <connectionStrings>
-    <add name="DioKftEntities" connectionString="Data Source=tcp:diokftsqlserver.database.windows.net,1433;Initial Catalog=DioKft;Persist Security Info=False;User ID=DioKftAdmin@diokftsqlserver;Password=Admin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.EntityClient" />
-  </connectionStrings>-->
+  </entityFramework>-->  
   <connectionStrings>
     <add name="DioKftEntities" connectionString="metadata=res://*/Models.DioKftModel.csdl|res://*/Models.DioKftModel.ssdl|res://*/Models.DioKftModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=tcp:diokftsqlserver.database.windows.net,1433;Initial Catalog=DioKft;User ID=DioKftAdmin@diokftsqlserver;Password=Admin123&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
+
   <!--<connectionStrings>
-  <add name="DioKftEntities" connectionString="metadata=res://*/Models.DioKftModel.csdl|res://*/Models.DioKftModel.ssdl|res://*/Models.DioKftModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=tcp:dio-kft-sql-server.database.windows.net,1433;Initial Catalog=DioKftDB;User Id=msapi@dio-kft-sql-server.database.windows.net;Password=Labhoz9324&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>-->
+    <add name="DioKftEntities" connectionString="metadata=res://*/Models.DioKftModel.csdl|res://*/Models.DioKftModel.ssdl|res://*/Models.DioKftModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PEPJ337;initial catalog=DioKFT;persist security info=True;user id=DioKftUser;password=DioKftUser1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>-->
 </configuration>
 <!--ProjectGuid: 4F2C5103-FCA4-4595-B100-9300D51E0185-->
