--- a/DioKftSite/DioKftSite.csproj
+++ b/DioKftSite/DioKftSite.csproj
@@ -264,6 +264,7 @@
     <Content Include="Content\Images\Agriculture_Portfolio_Leica_Geosystems_1766x750.jpg" />
     <Content Include="Content\Images\background.jpg" />
     <Content Include="Content\Images\contact-header.jpg" />
+    <Content Include="Content\Images\default-avatar.png" />
     <Content Include="Content\Images\dio logo_barna_korbevagva.png" />
     <Content Include="Content\Images\dio_logo.png" />
     <Content Include="Content\Images\dio_logo_felirat.png" />
@@ -325,7 +326,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
