--- a/DioKftSite/packages.config
+++ b/DioKftSite/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net462" />
   <package id="bootstrap" version="3.0.0" targetFramework="net462" />
+  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
   <package id="jQuery" version="1.10.2" targetFramework="net462" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net462" />
@@ -26,11 +27,14 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net462" />
   <package id="Modernizr" version="2.6.2" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
   <package id="Respond" version="1.2.0" targetFramework="net462" />
+  <package id="Sendgrid" version="9.9.0" targetFramework="net462" />
+  <package id="SpreadsheetLight" version="3.4.9" targetFramework="net462" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net462" />
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net462" />
   <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net462" />
   <package id="System.Net.Requests" version="4.0.11" targetFramework="net462" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net462" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net462" />
